--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -121,8 +121,8 @@
 
     <!--site -->
     <div class="rowChng centerVer">
-      <div class="column float">
-        <img src="greylines.jpg" alt="DIAGRAM" >
+      <div class="column">
+        <img src="greylines.jpg" alt="DIAGRAM">
       </div>
       <div class="blankVer"> </div>
 
@@ -146,44 +146,42 @@
     <!-- content-->
     <!--diagram-->
     <div class="column centerVer">
-      <img src="object.jpg" alt="DIAGRAM" >
+      <img src="object.jpg" alt="DIAGRAM">
 
       <div class="column widthM">
-        <P class="titleL"> 2D TO 3D</P>
+        <P class="titleM"> 2D TO 3D</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
       </div>
     </div>
     <!--diagram-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
     <!--geometry-->
     <div class="column centerVer">
-      <div class="column float">
-        <img src="model.jpg" alt="DIAGRAM" >
-      </div>
+      <img src="model.jpg" alt="DIAGRAM">
       <div class="column widthM">
-        <P class="titleL">GEOMETRY ON SITE</P>
+        <P class="titleM">GEOMETRY ON SITE</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Transfer the geometry to site </p>
       </div>
     </div>
     <!--geometry-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--density-->
-    <div class="rowChng centerVer">
-      <div class="float">
-        <p class="titleL">2D TO 3D MANIPULATION</p>
+    <div class="column centerVer">
+      <img src="cut.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
+      <div class="column">
+        <p class="titleM">2D TO 3D MANIPULATION</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Cut and fold on both side of the bristol paper</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="column float">
-        <img src="cut.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--density-->
+    <div class="blankHL"></div>
 
     <!-- content-->
     <div class="row heightM centerVer ">
@@ -192,20 +190,19 @@
     </div>
     <!-- content-->
     <!--site -->
-    <div class="rowChng centerVer">
+    <div class="column centerVer">
+      <img src="diagram.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
       <div class="column">
-        <p class="titleL">DIAGRAMS</p>
+        <p class="titleM">DIAGRAMS</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Programs including market, observation place, beer garden, etc. </p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="column float">
-        <img src="diagram.jpg" alt="DIAGRAM" >
-      </div>
     </div>
     <!--site -->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow"> Flyover View</p>
@@ -216,13 +213,11 @@
 
 
     <!--Section Perspective -->
-    <div class="rowChng centerVer">
-      <div class="column float">
-        <img src="render.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
+    <div class="column centerVer">
+      <img src="render.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
       <div class="column ">
-        <P class="titleL">FLYOVER VIEW</P>
+        <P class="titleM">FLYOVER VIEW</P>
         <p class="lineHorizAll"></p>
         <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
@@ -238,40 +233,46 @@
 
 
     <!--Site -->
-    <div class="rowChng centerVer">
-      <div class="column">
-        <p class="titleL">SITE</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">This site is one of the most popular places in san Francisco. Along
-          the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
-          entrance on the southern side.
-        </p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="column float">
-        <img src="site1.jpg" alt="DIAGRAM" >
-      </div>
-    </div>
-    <!--Site -->
-    <div class="blankHXL"></div>
-
-    <!--Site -->
     <div class="column centerVer">
-        <img src="site.jpg" alt="DIAGRAM" >
-        <div class="blankHM"></div>
+      <img src="site1.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+      <div class="widthM">
 
-      <div class="column">
-        <P class="titleL">SITE</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102</p>
-
-      </div>
+      <p class="titleM">SITE</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">This site is one of the most popular places in san Francisco. Along
+        the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
+        entrance on the southern side.
+      </p>
     </div>
-    <!--Site -->
-    <div class="blankHXL"></div>
+
+    </div>
+
+  <!--Site -->
+  <div class="blankHXL"></div>
+
+  <!--Site -->
+  <div class="column centerVer">
+    <img src="site.jpg" alt="DIAGRAM">
+    <div class="blankHM"></div>
+
+    <div class="column">
+      <P class="titleM">SITE</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102</p>
+
+    </div>
+  </div>
+  <!--Site -->
+  <div class="blankHXL"></div>
 
 
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+  <div class="blank-lineheight-s"></div>
+
+
+  <div class="blankHXL"></div>
 
 
   </div>
