--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -116,119 +116,120 @@
   <!--body-->
   <div class="blankPhone"></div>
   <div class="blankHXL"></div>
-  <div class="marginAll marginAll1920">
 
 
-    <!--diagram 1-->
-    <div class="rowChng centerVer">
-      <div class="float">
-        <img src="render.jpg" alt="DIAGRAM">
-      </div>
-      <div class="blankVer"></div>
-      <div class="column widthM">
-        <P class="titleL">NARROW STRIPES</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Using a series of straps to divide the space that providing an
-          infrastructure space serves the community nearby</p>
-      </div>
-
+  <!--diagram 1-->
+  <div class="rowChng centerVer marginAll marginAll1920">
+    <div class="float">
+      <img src="render.jpg" alt="DIAGRAM">
     </div>
-    <!--diagram 1-->
-
-
-    <!-- content-->
-    <div class="row heightM centerVer ">
-      <p class="tArrow"> Programs and Diagrams </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+    <div class="blankVer"></div>
+    <div class="column widthM">
+      <P class="titleL">NARROW STRIPES</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Using a series of straps to divide the space that providing an
+        infrastructure space serves the community nearby</p>
     </div>
-    <!-- content-->
-
-    <div class="blankHS"></div>
-
-
-    <!--diagram 2-->
-    <div class="rowChng rowChngRV centerVer">
-      <div class="column widthM">
-        <p class="titleL">PROGRAMS</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Three categories of programs. Social and Leisure, Library, and
-          miscellaneous</p>
-      </div>
-      <div class="column float">
-        <img src="diagram.jpg" alt="DIAGRAM">
-      </div>
-    </div>
-    <!--diagram 2-->
-    <br>
-
-
-    <!-- content-->
-    <div class="row heightM centerVer ">
-      <p class="tArrow"> Renders</p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-
-
-    <!--Section Perspective -->
-    <div class="rowChng centerVer">
-      <div class="column float">
-        <img src="render1.jpg" alt="DIAGRAM">
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="column widthM">
-        <P class="titleL">RENDERS</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Multiple views</p>
-      </div>
-    </div>
-    <!--Section Perspective -->
-
-    <!-- content-->
-    <div class="row marginAll heightM centerVer marginAll1920">
-      <p class="tArrow"> Site and Floor Plan </p>
-      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-
-    <!--Plan-->
-    <div class="rowChng rowChngRV centerVer">
-      <div class="column widthM">
-        <p class="titleL">SITE PLAN</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Relationship between site and the infrastructure building</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="float">
-        <img src="siteplan.jpg" alt="DIAGRAM">
-      </div>
-    </div>
-    <!--Plan-->
-    <div class="blankHXL"></div>
-    <!--Plan site-->
-    <div class="rowChng centerVer">
-      <div class="column float">
-        <img src="site.jpg" alt="DIAGRAM">
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="column widthM">
-        <p class="titleL"> SITE</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Location: Hyde Park, London</p>
-      </div>
-
-    </div>
-    <!--Plan site-->
-    <div class="blankHXL"></div>
-
-
-
-
 
   </div>
+  <!--diagram 1-->
+  <div class="blankHL"></div>
+
+
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Programs and Diagrams </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+
+  <div class="blankHS"></div>
+
+
+  <!--diagram 2-->
+  <div class="rowChng rowChngRV centerVer marginAll marginAll1920">
+    <div class="column widthM">
+      <p class="titleM">PROGRAMS</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Three categories of programs. Social and Leisure, Library, and
+        miscellaneous</p>
+    </div>
+    <div class="column float">
+      <img src="diagram.jpg" alt="DIAGRAM">
+    </div>
+  </div>
+  <!--diagram 2-->
+  <div class="blankHM"></div>
+
+
+  <!-- content-->
+  <div class="row  heightM centerVer marginAll marginAll1920">
+    <p class="tArrow"> Renders</p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+  <!--Section Perspective -->
+  <div class="rowChng centerVer marginAll marginAll1920">
+    <div class="column float">
+      <img src="render1.jpg" alt="DIAGRAM">
+    </div>
+    <div class="blankVer">
+    </div>
+    <div class="column widthM">
+      <P class="titleM">RENDERS</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Multiple views</p>
+    </div>
+  </div>
+  <!--Section Perspective -->
+
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Site and Floor Plan </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+
+  <!--Plan-->
+  <div class="rowChng rowChngRV centerVer marginAll marginAll1920">
+    <div class="column widthM">
+      <p class="titleM">SITE PLAN</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Relationship between site and the infrastructure building</p>
+    </div>
+    <div class="blankVer">
+    </div>
+    <div class="float">
+      <img src="siteplan.jpg" alt="DIAGRAM">
+    </div>
+  </div>
+  <!--Plan-->
+  <div class="blankHXL"></div>
+  <!--Plan site-->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="site.jpg" alt="DIAGRAM">
+    <div class="blankHS"></div>
+    <p class="titleM"> SITE</p>
+    <p class="lineHorizAll"></p>
+    <p class="textM">Location: Hyde Park, London</p>
+  </div>
+
+  </div>
+  <!--Plan site-->
+  <div class="blankHXL"></div>
+
+
+
+
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+  <div class="blank-lineheight-s"></div>
+
+
+
+  <div class="blankHXL"></div>
+
+
 </body>
 
 
