--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -114,17 +114,15 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
-    <div class="blankHXL"></div>
+  <div class="marginAll marginAll1920">
+    <div class="blankHL"></div>
 
 
     <!--diagram 1-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="diagram.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"></div>
-      <div class="body-right body-txt">
+    <div class="column centerVer">
+      <img src="diagram.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+      <div class="column widthM">
         <P class="titleL">RECOVERY OF RIVER EDGES</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
@@ -140,193 +138,195 @@
     </div>
     <!-- content-->
     <!--density-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <p class="titleL"> DENSITY OF DIVISIONS</p>
+    <div class="column centerVer">
+      <img src="density.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+      <div class="column widthM">
+
+        <p class="titleM"> DENSITY OF DIVISIONS</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Research to project</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="density.jpg" alt="DIAGRAM" >
-      </div>
-
-
-
     </div>
-    <!--density-->
 
 
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Site and Research </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-    <br>
+
+  </div>
+  <!--density-->
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Site and Research </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+
+  <!-- content-->
+  <div class="marginAll marginAll1920">
 
     <!--site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">SITE ANALYSIS</p>
+    <div class="column">
+      <img src="site.jpg" alt="DIAGRAM">
+
+      <div class="blankHS"></div>
+      <div class="column widthM">
+
+        <p class="titleM">SITE ANALYSIS</p>
         <p class="lineHorizAll"></p>
         <p class="textM">The site is located in the LA River near the Sunnynook River Park.</p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="body-left body-img float">
-        <img src="site.jpg" alt="DIAGRAM" >
-      </div>
     </div>
     <!--site -->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
     <!--site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">SITE RESEARCH METHOD</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Photos below were taken from the linear path. Each photo took in
-          between every single six feet along the path. </p>
-      </div>
-      <div class="blankVer"> </div>
+    <div class="column">
+      <img src="site_0.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
 
-      <div class="body-left body-img float">
-        <img src="site_0.jpg" alt="DIAGRAM" >
-      </div>
+      <p class="titleM">SITE RESEARCH METHOD</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Photos below were taken from the linear path. Each photo took in
+        between every single six feet along the path. </p>
+      <div class="blankHS"></div>
+
     </div>
     <!--site -->
-    <div class="blankHXL"></div>
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Photos of Sequences and Movements </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-    <!--Section Perspective -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="research_photos.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">Photos of Sequences and Movements</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">the sequences of photos show the relationship between subjects(the
-          place where took photos) and objects(main object on site).</p>
-      </div>
-    </div>
-    <!--Section Perspective -->
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Manipulation </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-
-    <!--research-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">RESEARCH ON SITE</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Transform the research final result to site</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="research.jpg" alt="DIAGRAM" >
-      </div>
-    </div>
-    <!--research-->
-    <div class="blankHXL"></div>
-
-    <!--research-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">FINAL VIEWS</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">On-site view before vs. after</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="research_1.jpg" alt="DIAGRAM" >
-      </div>
-    </div>
-    <!--research-->
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> On Site </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-
-    <div class="blankHXL"></div>
-    <!--programs-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="programs.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-txt">
-        <P class="titleL">PROGRAMS</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Cafe, restaurant, kayak</p>
-      </div>
-    </div>
-    <!--programs-->
-    <div class="blankHXL"></div>
-
-    <!--programs-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">DIAGRAMS</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Relationship between site and the surrounding</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="diagram_1.jpg" alt="DIAGRAM" >
-      </div>
-    </div>
-    <!--programs-->
-    <div class="blankHXL"></div>
-    <!--plan -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="plan.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-txt">
-        <P class="titleL">FLOOR PLAN</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Horizontal division create the space with dynamic view</p>
-      </div>
-    </div>
-    <!--plan -->
-    <div class="blankHXL"></div>
-
-    <!--render-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">Collages</p>
-        <p class="lineHorizAll"></p>
-        <p class="textM">Experiencing the space with human perspective</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" >
-      </div>
-    </div>
-    <!--render-->
-    <div class="blankHXL"></div>
 
 
+  </div>
+  <div class="blankHXL"></div>
 
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Photos of Sequences and Movements </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+
+  <!-- content-->
+
+
+  <!--Section Perspective -->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="research_photos.jpg" alt="Photos">
+    <div class="column widthM">
+      <P class="titleM">Photos of Sequences and Movements</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">the sequences of photos show the relationship between subjects(the
+        place where took photos) and objects(main object on site).</p>
+    </div>
+  </div>
+  <!--Section Perspective -->
+  <div class="blankHL"> </div>
+
+
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Manipulation </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+
+  <!-- content-->
+  <!--research-->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="research.jpg" alt="DIAGRAM">
+    <div class="blankHS"> </div>
+    <div class="widthM">
+      <p class="titleM">RESEARCH ON SITE</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Transform the research final result to site</p>
+    </div>
+
+  </div>
+  <!--research-->
+  <div class="blankHL"></div>
+
+  <!--research-->
+  <div class="column centerVer marginAll marginAll1920">
+
+    <img src="research_1.jpg" alt="DIAGRAM">
+    <div class="blankHS"> </div>
+
+    <div class="column">
+      <p class="titleM">FINAL VIEWS</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">On-site view before vs. after</p>
+    </div>
+
+  </div>
+  <!--research-->
+
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> On Site </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+
+  <!-- content-->
+
+
+  <!--programs-->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="programs.jpg" alt="DIAGRAM">
+    <div class="blankHS"> </div>
+    <div class="column widthM">
+      <P class="titleM">PROGRAMS</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Cafe, restaurant, kayak</p>
+    </div>
+  </div>
+  <!--programs-->
+  <div class="blankHL"></div>
+
+  <!--programs-->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="diagram_1.jpg" alt="DIAGRAM">
+    <div class="blankHXS"> </div>
+
+    <div class="column widthM">
+      <p class="titleM">DIAGRAMS</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Relationship between site and the surrounding</p>
+    </div>
+    <div class="blankHS">
+    </div>
+  </div>
+  <!--programs-->
+  <div class="blankHL"></div>
+  <!--plan -->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="plan.jpg" alt="DIAGRAM">
+    <div class="blankHS">
+    </div>
+    <div class="column widthM">
+      <P class="titleM">FLOOR PLAN</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Horizontal division create the space with dynamic view</p>
+    </div>
+  </div>
+  <!--plan -->
+  <div class="blankHL"></div>
+
+  <!--render-->
+  <div class="column centerVer marginAll marginAll1920">
+    <img src="render.jpg" alt="DIAGRAM">
+
+    <div class="column">
+      <p class="titleM">Collages</p>
+      <p class="lineHorizAll"></p>
+      <p class="textM">Experiencing the space with human perspective</p>
+    </div>
+    <div class="blankHS">
+    </div>
+  </div>
+  <!--render-->
+  <div class="blankHXL"></div>
+
+
+
+
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+  <div class="blank-lineheight-s"></div>
+  <div class="blankHXL"></div>
 
 
   </div>
@@ -340,7 +340,7 @@
 
 
 <!--back to top-->
-<button  id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
