--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -114,17 +114,15 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
+  <div class="marginAll marginAll1920">
     <div class="blankHL"></div>
 
     <!--site -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="render0.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
+    <div class="column centerVer">
+      <img class="widthXL" src="render0.jpg" alt="DIAGRAM">
+      <div class="blankHXS"> </div>
 
-      <div class="body-right  body-txt">
+      <div class="column widthM">
         <p class="titleL">THE ROTATION OF CURVES </p>
         <p class="lineHorizAll"></p>
         <p class="textM">Foam finding and geometry manipulation</p>
@@ -142,31 +140,29 @@
     </div>
     <!-- content-->
     <!--geometry-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <P class="titleL"> A 20 FEET DIAMETER SITE</P>
+    <div class="column centerVer">
+      <img src="island.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
+      <div class="column widthM">
+        <P class="titleM"> A 20 FEET DIAMETER SITE</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Adding geometries based on requirement </p>
-      </div>
-      <div class="blankVer"></div>
-      <div class="body-left body-img float">
-        <img src="island.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--geometry-->
     <div class="blankHL"></div>
     <!--geometry-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <P class="titleL"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
+    <div class="column centerVer">
+      <img src="island1.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
+      <div class="column widthM">
+        <P class="titleM"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
         <p class="lineHorizAll"></p>
         <p class="textM">1st week, 6 volumes</p>
-          <p class="textM">2nd week, 8 geometries</p>
+        <p class="textM">2nd week, 8 geometries</p>
         <p class="textM"> 3rd week, 20 volumes</p>
-      </div>
-      <div class="blankVer"></div>
-      <div class="body-left body-img float">
-        <img src="island1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--geometry-->
@@ -176,37 +172,35 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <div class="blankHL"></div>
 
     <!--density-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <p class="titleL">TWO CUTS ONE FOAM</p>
+    <div class="column centerVer">
+      <img src="foamcut.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
+      <div class="column ">
+        <p class="titleM">TWO CUTS ONE FOAM</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Cut and fold the foam</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="foamcut.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--density-->
 
+    <div class="blankHL"></div>
 
 
     <!--site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">PHOTOS OF THE FOAM</p>
+    <div class="column centerVer">
+      <img src="foam0.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
+
+      <div class="column ">
+        <p class="titleM">PHOTOS OF THE FOAM</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Elevation view</p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="body-left body-img float">
-        <img src="foam0.jpg" alt="DIAGRAM" >
-      </div>
     </div>
     <!--site -->
     <div class="blankHL"></div>
@@ -215,13 +209,11 @@
 
 
     <!--Section Perspective -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="line3.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">DRAWING        </P>
+    <div class="column centerVer">
+      <img src="line3.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">DRAWING </P>
         <p class="lineHorizAll"></p>
         <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
@@ -230,22 +222,21 @@
     <!--Section Perspective -->
 
 
+    <div class="blankHL"></div>
 
     <!--Site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL"> DRAWING    </p>
+    <div class="column centerVer">
+      <img src="line2.jpg" alt="DIAGRAM">
+
+      <div class="column widthM">
+        <p class="titleM"> DRAWING </p>
         <p class="lineHorizAll"></p>
         <p class="textM">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="line2.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--Site -->
     <!-- content-->
@@ -254,55 +245,55 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--Site -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="foamisland.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">PART I + PART II = PART III</P>
+    <div class="column centerVer">
+      <img src="foamisland.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column ">
+        <P class="titleM">PART I + PART II = PART III</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Combine the island and the foam</p>
 
       </div>
     </div>
     <!--Site -->
+    <div class="blankHS"></div>
+
     <!--Site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">FLOOR PLANS </p>
+    <div class="column centerVer">
+      <img src="plan.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
+
+      <div class="column">
+        <p class="titleM">FLOOR PLANS </p>
         <p class="lineHorizAll"></p>
-        <p class="textM">A conceptual 4-story single-family house  </p>
+        <p class="textM">A conceptual 4-story single-family house </p>
         <p class="textM"> the form-finding concept of rotation curves shows in these plans </p>
 
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left body-img float">
-        <img src="plan.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--Site -->
     <div class="blankHL"></div>
     <!--Site -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="elv.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">ELEVATIONS</P>
+    <div class="column centerVer">
+      <img src="elv.jpg" alt="DIAGRAM">
+      <div class="column">
+        <P class="titleM">ELEVATIONS</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Concrete facade with openings</p>
-
       </div>
     </div>
     <!--Site -->
+    <div class="blankHXS"></div>
+
     <!--Site -->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">SECTIONS</p>
+    <div class="column centerVer">
+      <img src="section.jpg" alt="DIAGRAM">
+
+      <div class="column">
+        <p class="titleM">SECTIONS</p>
         <p class="lineHorizAll"></p>
         <p class="textM">
           the form-finding concept of rotation curves shows in these sections
@@ -311,19 +302,16 @@
       <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="section.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Site -->
     <div class="blankHL"></div>
     <!--Site -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">RENDERS</P>
+    <div class="column centerVer">
+      <img src="render.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">RENDERS</P>
         <p class="lineHorizAll"></p>
         <p class="textM">Two views from the inside of the house</p>
 
@@ -331,7 +319,10 @@
     </div>
     <!--Site -->
     <div class="blankHXL"></div>
-
+    <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+    <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+    <div class="blank-lineheight-s"></div>
+    <div class="blankHXL"></div>
 
 
 
@@ -346,7 +337,7 @@
 
 
 <!--back to top-->
-<button  id="myBtn" class=" myBtn-1550" title="Go to top">
+<button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
 
   <div id="btnFont">TOP</div>
