--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -91,7 +91,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -119,7 +119,7 @@
 
 
   <!--about gardenershub-->
-  <div class="bgGrey" id="bg-color-trigger">
+  <div class="colorGrey" id="bg-color-trigger">
 
     <div class="blankHL blankHL1920"></div>
     <div class="blankPhone"></div>
