--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -111,28 +111,26 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
 
   <!--body-->
-  <div class="marginAll">
+  <div class="marginAll marginAll1920">
 
 
     <!--site -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="LACAMA.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
+    <div class="column centerVer">
+      <img src="LACAMA.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
 
-      <div class="body-right  body-txt">
-        <p class="titleL">LACMA</p>
+      <div class="column">
+        <p class="titlel">LACMA</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Problem cloud study to urbanism building design
         </p>
       </div>
     </div>
     <!--site -->
-    <div class="blankHL"></div>
+    <div class="blankHM"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow">Problem Cloud
@@ -140,12 +138,13 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--Problem cloud-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <P class="titleL"> PROBLEM CLOUD</P>
+    <div class="rowChng centerVer">
+      <div class="column widthM">
+        <P class="titleM"> PROBLEM CLOUD</P>
         <p class="lineHorizAll"></p>
-        <br>
+        <div class="blankHS"> </div>
 
         <p class="textM">Using the skills, tools and materials gathered to date including
           folding, laser cutting, assembling layers of plywood, manipulating images into vectors to
@@ -153,19 +152,17 @@
         </p>
       </div>
       <div class="blankVer"></div>
-      <div class="body-left body-img float">
-        <img src="problem_cloud1.gif" alt="DIAGRAM" >
-      </div>
+        <img class="widthM" src="problem_cloud1.gif" alt="DIAGRAM">
     </div>
     <!--Problem cloud-->
-    <div class="blankHXL"></div>
+    <div class="blankHS"></div>
 
     <!--Problem cloud-->
-    <div class="row">
-      <div class="body-right body-txt">
-        <P class="titleL"> PROBLEM CLOUD</P>
+    <div class="rowChng centerVer">
+      <div class="column widthM">
+        <P class="titleM"> PROBLEM CLOUD</P>
         <p class="lineHorizAll"></p>
-        <div class="blankHL"></div>
+        <div class="blankHS"></div>
 
         <p class="textM">2 images in 3 color separations and one monochrome image. Take into
           account folding as studied in the box assignment, as well as offsetting to deal with
@@ -173,9 +170,7 @@
         </p>
       </div>
       <div class="blankVer"></div>
-      <div class="body-left body-img float">
-        <img src="problem_cloud2.gif" alt="DIAGRAM" >
-      </div>
+        <img class="widthM" src="problem_cloud2.gif" alt="DIAGRAM">
     </div>
     <!--Problem cloud-->
 
@@ -190,13 +185,13 @@
     </div>
     <!-- content-->
     <!--Cloud Diagram -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="problem_cloud.jpg" alt="DIAGRAM" >
+    <div class="rowChng centerVer">
+      <div class="column ">
+        <img src="problem_cloud.jpg" alt="DIAGRAM">
       </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">PROBLEM CLOUD DIAGRAM
+      <div class="blankHS"> </div>
+      <div class="column widthS">
+        <P class="titleM">PROBLEM CLOUD DIAGRAM
         </P>
         <p class="lineHorizAll"></p>
         <br>
@@ -208,14 +203,16 @@
       </div>
     </div>
     <!--Cloud Diagram -->
+    <div class="blankHM"> </div>
+
     <!--Cloud Diagram -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="problem_cloud1.jpg" alt="DIAGRAM" >
+    <div class="rowChng centerVer">
+      <div class="column ">
+        <img src="problem_cloud1.jpg" alt="DIAGRAM">
       </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">OPERATION METHOD
+      <div class="blankHS"> </div>
+      <div class="column widthS">
+        <P class="titleM">OPERATION METHOD
         </P>
         <p class="lineHorizAll"></p>
         <br>
@@ -228,17 +225,18 @@
       </div>
     </div>
     <!--Cloud Diagram -->
+    <div class="blankHM"> </div>
+
     <!--Cloud Diagram -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="problem_cloud2.jpg" alt="DIAGRAM" >
+    <div class="rowChng centerVer">
+      <div class="column ">
+        <img src="problem_cloud2.jpg" alt="DIAGRAM">
       </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">OPERATION METHOD
-        </P>
+      <div class="blankHS"> </div>
+      <div class="column widthS">
+        <P class="titleM">OPERATION METHOD </P>
         <p class="lineHorizAll"></p>
-        <br>
+        <div class="blankHS"> </div>
         <p class="textM">no corner armature, image
           layers are offset perpendicular
           with no distortion or shifting
@@ -246,14 +244,16 @@
       </div>
     </div>
     <!--Cloud Diagram -->
+    <div class="blankHM"> </div>
+
     <!--Cloud Diagram -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="problem_cloud3.jpg" alt="DIAGRAM" >
+    <div class="rowChng centerVer">
+      <div class="column ">
+        <img src="problem_cloud3.jpg" alt="DIAGRAM">
       </div>
       <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">OPERATION METHOD
+      <div class="column widthS">
+        <P class="titleM">OPERATION METHOD
         </P>
         <p class="lineHorizAll"></p>
         <br>
@@ -266,6 +266,8 @@
       </div>
     </div>
     <!--Cloud Diagram -->
+    <div class="blankHM"> </div>
+
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow"> COLOR & LAYERS </p>
@@ -273,9 +275,11 @@
     </div>
     <!-- content-->
     <!--CaseStudy1 -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL">FIRST ROUND TEST </p>
+    <div class="column centerVer">
+      <img src="test.jpg" alt="DIAGRAM">
+
+      <div class="column ">
+        <p class="titleM">FIRST ROUND TEST </p>
         <p class="lineHorizAll"></p>
         <p class="textM">five sides of a box unfolded. As one
           layer of the image is folded to the box, formerly contiguous
@@ -283,11 +287,7 @@
           hold the image layer together, and to align it with the other
           image layers. </p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-img float">
-        <img src="test.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--CaseStudy1 -->
 
@@ -301,13 +301,12 @@
     </div>
     <!-- content-->
     <!--render -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">BOXES FROM PROBLEM CLOUD</P>
+    <div class="column centerVer">
+      <div class="column">
+        <img src="render.jpg" alt="DIAGRAM">
+        <div class="blankHS"> </div>
+
+        <P class="titleM">BOXES FROM PROBLEM CLOUD</P>
         <p class="lineHorizAll"></p>
         <p class="textM"> Separate the boxes from the problem cloud </p>
 
@@ -324,9 +323,9 @@
     <!-- content-->
 
     <!--Site and City -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL"> OTHER MUSEUMS IN LA </p>
+    <div class="rowChng">
+      <div class="column widthM">
+        <p class="titleM"> OTHER MUSEUMS IN LA </p>
         <p class="lineHorizAll"></p>
         <p class="textM">searching for context and narrative with other museums
 
@@ -334,61 +333,61 @@
       </div>
       <div class="blankVer">
       </div>
-      <div class="body-right body-img float">
-        <img src="site_city_1.jpg" alt="DIAGRAM" >
+      <div class="column widthM">
+        <img src="site_city_1.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">Museums in LA</p>
       </div>
     </div>
     <!--Site and City -->
     <!--Site and City2 -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL"> EXTENSION OF ANGLE ORIENTATION </p>
+    <div class="rowChng">
+      <div class="column widthM">
+        <p class="titleM"> EXTENSION OF ANGLE ORIENTATION </p>
         <p class="lineHorizAll"></p>
         <p class="textM">Extension of the orientation of the boxes on site
         </p>
       </div>
       <div class="blankVer">
       </div>
-      <div class="body-right body-img float">
-        <img src="site_city_2.jpg" alt="DIAGRAM" >
+      <div class="column widthM">
+        <img src="site_city_2.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">Orientation of grid</p>
       </div>
     </div>
     <!--Site and City2 -->
     <!--Site and City3 -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL">ANGLES IN BETWEEN VERTICALITY</p>
+    <div class="rowChng">
+      <div class="column widthM">
+        <p class="titleM">ANGLES IN BETWEEN VERTICALITY</p>
         <p class="lineHorizAll"></p>
         <p class="textM">the extension of the angles in between vertical box diagonal
         </p>
       </div>
       <div class="blankVer">
       </div>
-      <div class="body-right body-img float">
-        <img src="site_city_3.jpg" alt="DIAGRAM" >
+      <div class="column widthM">
+        <img src="site_city_3.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">Angle from top and bottom boxes</p>
       </div>
     </div>
     <!--Site and City3 -->
     <!--Site and City4 -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL"> ANGLES IN BETWEEN HORIZONTALITY</p>
+    <div class="rowChng">
+      <div class="column widthM">
+        <p class="titleM"> ANGLES IN BETWEEN HORIZONTALITY</p>
         <p class="lineHorizAll"></p>
         <p class="textM">the extension of the angles in between horizontal box diagonal
         </p>
       </div>
       <div class="blankVer">
       </div>
-      <div class="body-right body-img float">
-        <img src="site_city_4.jpg" alt="DIAGRAM" >
+      <div class="column widthM">
+        <img src="site_city_4.jpg" alt="DIAGRAM">
         <p class="textS styleItalic"> Angle in between the rotated boxes</p>
       </div>
     </div>
     <!--Site and City4 -->
-    <div class="blankHXL"></div>
+    <div class="blankHS"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -398,81 +397,73 @@
     </div>
     <!-- content-->
     <!--SITE Plan-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="onsite.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">SITE PLAN </P>
+    <div class="column centerVer">
+      <img src="onsite.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">SITE PLAN </P>
         <p class="lineHorizAll"></p>
         <p class="textM">Large-Scale</p>
       </div>
     </div>
     <!--site Plan-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--Plan1-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">FLOOR PLAN </p>
+    <div class="column centerVer">
+      <img src="plan1.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+
+      <div class="column">
+        <p class="titleM">FLOOR PLAN </p>
         <p class="lineHorizAll"></p>
         <p class="textM">Ground Floor</p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="body-left body-img float">
-        <img src="plan1.jpg" alt="DIAGRAM" >
-      </div>
     </div>
     <!--Plan1-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--Plan2-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="plan2.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">FLOOR PLAN </P>
+    <div class="column centerVer">
+      <img src="plan2.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">FLOOR PLAN </P>
         <p class="lineHorizAll"></p>
         <p class="textM">2F</p>
       </div>
     </div>
     <!--Plan2-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--Plan3-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">FLOOR PLAN </p>
+    <div class="column centerVer">
+      <img src="plan3.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+
+      <div class="column">
+        <p class="titleM">FLOOR PLAN </p>
         <p class="lineHorizAll"></p>
         <p class="textM">3F</p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="body-left body-img float">
-        <img src="plan3.jpg" alt="DIAGRAM" >
-      </div>
     </div>
     <!--Plan3-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--Plan4-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="plan4.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">FLOOR PLAN </P>
+    <div class="column centerVer">
+      <img src="plan4.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">FLOOR PLAN </P>
         <p class="lineHorizAll"></p>
         <p class="textM">4F</p>
       </div>
     </div>
     <!--Plan4-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -482,13 +473,11 @@
     </div>
     <!-- content-->
     <!--Elevations-->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="section1.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">ELEVATION </P>
+    <div class="column centerVer">
+      <img src="section1.jpg" alt="DIAGRAM">
+      <div class="blankHS"> </div>
+      <div class="column">
+        <P class="titleM">ELEVATION </P>
         <p class="lineHorizAll"></p>
         <p class="textM"> Section A' - A'</p>
       </div>
@@ -497,19 +486,24 @@
     <div class="blankHXL"></div>
 
     <!--Elevation1-->
-    <div class="row">
-      <div class="body-right  body-txt">
-        <p class="titleL">ELEVATION </p>
+    <div class="column centerVer">
+      <img src="section2.jpg" alt="DIAGRAM">
+
+      <div class="blankHS"> </div>
+
+      <div class="column">
+        <p class="titleM">ELEVATION </p>
         <p class="lineHorizAll"></p>
         <p class="textM"> Section B' - B'</p>
       </div>
-      <div class="blankVer"> </div>
 
-      <div class="body-left body-img float">
-        <img src="section2.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--Elevation1-->
+    <div class="blankHXL"></div>
+    <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+    <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+    <div class="blank-lineheight-s"></div>
     <div class="blankHXL"></div>
 
 
