--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -89,7 +89,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -209,7 +209,7 @@
     </div>
     <!-- cover -->
     <div class="blankHXL"></div>
-    
+
     <!-- content-->
     <div class="row heightM centerVer">
       <p class="tArrow"> Abstract </p>
@@ -224,7 +224,7 @@
       <p class="lineHorizAll"></p>
       <div class="blankHS"></div>
 
-      <p class="textS ">Architecture is nothing more but a union of disparate systems, and
+      <p class="textL">Architecture is nothing more but a union of disparate systems, and
         every aspect of an architectural design is part of one system or another. The individual
         systems can be continuous or discontinuous, and they are all related in some way. As an
         architect, it’s important that one does not only consider continuity as it pertains to a
@@ -234,7 +234,7 @@
         effect on other systems.
       </p>
       <div class="blankHS"></div>
-      <p class="textS">In a building, each type of architectural elements creates a kind of
+      <p class="textL">In a building, each type of architectural elements creates a kind of
         spatial continuity or discontinuity based on the way it’s arranged. For example, if we
         have a row of ten columns, each 10 ft apart, we can say that they are continuous because
         they form a sequence. If we have ten columns with different shape or orientation, we can
@@ -244,7 +244,7 @@
         systems.
       </p>
       <div class="blankHS"></div>
-      <p class="textS">The degree of continuity and discontinuity can be adjusted to achieve
+      <p class="textL">The degree of continuity and discontinuity can be adjusted to achieve
         the needs of a particular program. For example, when designing a 600 meter tall landmark
         skyscraper, one must consider the building’s use for both shopping and as an office. Many
         archi- tects who design these types of buildings will use focal points such as the arrival
@@ -277,7 +277,7 @@
       <p class="lineHorizAll"></p>
       <br>
 
-      <p class="textS">Architects use objects to connect and divide space. The arrangement of
+      <p class="textL">Architects use objects to connect and divide space. The arrangement of
         objects appreciates aesthetic appeal and spatial quality. The goal of this thesis is to
         showcase a series of experiments in the arrangement of architectural elements, and explore
         the relationships between architectural components and the integration of various types of
@@ -288,7 +288,7 @@
         similarity. The similarity includes size and shape, spacing and orientation.
       </p>
       <br>
-      <p class="textS">For instance, if we have a row of ten columns with similar size,
+      <p class="textL">For instance, if we have a row of ten columns with similar size,
         shape, spacing, or orientation, we call it continuity. If we have different size, or
         different shape, or different orientation, we can say that is discontinuity because they
         do not maintain the sequence.
@@ -305,103 +305,100 @@
     </div>
     <!-- content-->
     <!--CaseStudy1 -->
-    <div class="row">
-      <div class="body-left  body-txt">
+    <div class="rowChng centerVer">
+      <div class="column widthM">
         <p class="titleL">CASE STUDY 1</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Here are some historical buildings that have utilized continuity and
           discontinuity to create distinctive features. </p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-img float">
-        <img src="CaseStudy1.jpg" alt="DIAGRAM" >
+      <div class="blankVer"> </div>
+
+      <div class="column centerVer">
+        <img src="CaseStudy1.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
       </div>
     </div>
     <!--CaseStudy1 -->
-    <br>
-    <br>
+    <div class="blankHM"></div>
     <!--CaseStudy2 -->
-    <div class="row">
-      <div class="body-left  body-txt">
+    <div class="rowChng centerVer">
+      <div class="column widthM">
         <p class="titleL">CASE STUDY 2</p>
         <p class="lineHorizAll"></p>
         <p class="textM">These case studies interpret the relationship between the
           architectural elements and aesthetic appeal. </p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-img float">
-        <img src="CaseStudy2.jpg" alt="DIAGRAM" >
+      <div class="blankVer"> </div>
+
+      <div class="column centerVer">
+        <img src="CaseStudy2.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
       </div>
     </div>
     <!--CaseStudy2 -->
+    <div class="blankHM"></div>
     <!--CaseStudy3 -->
-    <div class="row">
-      <div class="body-left  body-txt">
-        <p class="titleL">CASE STUDY 3 </p>
+    <div class="rowChng centerVer">
+      <div class="column widthM">
+        <p class="titleL">CASE STUDY 3</p>
         <p class="lineHorizAll"></p>
         <p class="textM">The following experiments will explore the effect of changes in the
           degree of continuity and discontinuity in these iconic buildings.</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-img float">
-        <img src="CaseStudy3.jpg" alt="DIAGRAM" >
+      <div class="blankVer"> </div>
+
+      <div class="column centerVer">
+        <img src="CaseStudy3.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
       </div>
     </div>
     <!--CaseStudy3 -->
+    <div class="blankHM"></div>
     <!--CaseStudy4 -->
-    <div class="row">
-      <div class="body-left  body-txt">
+    <div class="rowChng centerVer">
+      <div class="column widthM">
         <p class="titleL">CASE STUDY 4</p>
         <p class="lineHorizAll"></p>
         <p class="textM">
-
+          The following experiments will explore the effect of changes in the
+          degree of continuity and discontinuity in these iconic buildings
         </p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-img float">
-        <img src="CaseStudy4.jpg" alt="DIAGRAM" >
+      <div class="blankVer"> </div>
+
+      <div class="column centerVer">
+        <img src="CaseStudy4.jpg" alt="DIAGRAM">
         <p class="textS styleItalic">LE CORBUSIER, CARPENTER CENTER 1962</p>
       </div>
     </div>
     <!--CaseStudy4 -->
+    <div class="blankHM"></div>
+
+
 
     <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Results of Manipulations
-      </p>
+    <div class="row  heightM centerVer  ">
+      <p class="tArrow"> Results of Manipulations</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <!--Results of Manipulations -->
-    <div class="row">
-      <div class="body-left body-img float">
-        <img src="compare.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer"> </div>
-      <div class="body-right body-txt">
-        <P class="titleL">RESULTS OF MANIPULATIONS</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">the comparison of the results of case study manipulations </p>
 
-      </div>
+    <!--Results of Manipulations -->
+    <div class="column">
+      <img src="compare.jpg" alt="DIAGRAM">
+
+      <P class="titleL">RESULTS OF MANIPULATIONS</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">the comparison of the results of case study manipulations </p>
     </div>
     <!-- Results of Manipulations -->
-
     <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Architecture Projects
-      </p>
+    <div class="row  heightM centerVer  ">
+      <p class="tArrow"> Architecture Projects</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-
     <!--project -->
     <div class="column">
       <p class="titleL"> My Understanding of Architecture </p>
@@ -420,11 +417,11 @@
 
 
 
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
 
 
   <!--project1 -->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <p class="titleL"> My Understanding of Architecture </p>
     <p class="lineHorizAll"></p>
     <p class="textM"> Different types of sequences can be extended into larger systems.
@@ -443,14 +440,14 @@
     <p class="textS styleItalic">a union of disparate systems</p>
   </div>
   <!--project1 -->
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
 
   <!--video-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <P class="titleL"> DIFFERENTIATED CONTINUITY </P>
     <p class="lineHorizAll"></p>
     <p class="textM">Differentiated continuity apply on different scales</p>
-    <div class="blankHXL"></div>
+    <div class="blankHS"></div>
 
     <div class="centerHorz">
       <video width="70%" height="auto" controls autoplay>
@@ -459,9 +456,10 @@
     </div>
   </div>
   <!--video-->
+  
   <!-- content-->
-  <div class="content-tl marginAll">
-    <p class="tArrow"> Drawings of multiple scales </p>
+  <div class="row  heightM centerVer marginAll marginAll1920">
+    <p class="tArrow"> Drawings of multiple scales</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
@@ -469,101 +467,102 @@
 
 
 
+
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <p class="titleL">DRAWING</p>
     <p class="lineHorizAll"></p>
     <p class="textM">Large-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods1.png" alt="DIAGRAM" class="image float">
+    <img src="methods1.png" alt="DIAGRAM">
   </div>
 
   <!--Scale-->
   <div class="blankHXL"></div>
 
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll1920 marginAll">
     <p class="titleL">DRAWING </p>
     <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods1-1.png" alt="DIAGRAM" class="image float">
+    <img src="methods1-1.png" alt="DIAGRAM">
   </div>
   <!--Scale-->
   <div class="blankHXL"></div>
 
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <P class="titleL">DRAWING </P>
     <p class="textM">Large-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods2.png" alt="DIAGRAM" >
+    <img src="methods2.png" alt="DIAGRAM">
 
   </div>
   <!--Scale-->
   <div class="blankHM"></div>
 
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
 
     <P class="titleL">DRAWING </P>
     <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods2-1.png" alt="DIAGRAM" >
+    <img src="methods2-1.png" alt="DIAGRAM">
 
   </div>
   <!--Scale-->
   <div class="blankHL"></div>
 
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <p class="titleL">DRAWING</p>
     <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
-    <img src="methods3.png" alt="DIAGRAM" >
+    <img src="methods3.png" alt="DIAGRAM">
   </div>
   <!--Scale-->
   <div class="blankHL"></div>
 
   <!--Scale-->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
 
     <p class="titleL">DRAWING </p>
     <p class="lineHorizAll"></p>
     <p class="textM">Small-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods3-1.png" alt="DIAGRAM" >
+    <img src="methods3-1.png" alt="DIAGRAM">
   </div>
   <!--Scale-->
   <div class="blankHXL"></div>
+
   <!-- content-->
-  <div class="content-tl marginAll">
+  <div class="row  heightM centerVer marginAll marginAll1920">
     <p class="tArrow"> Photo Documentation</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!--photos -->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <P class="titleL">PHOTOS</P>
     <p class="lineHorizAll"></p>
     <p class="textM"> Circulation</p>
     <div class="blankHM"></div>
     <img src="photo1.png" alt="DIAGRAM" class="image float">
-
   </div>
   <!--photos -->
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
 
 
   <!--photos -->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <p class="titleL">PHOTOS </p>
     <p class="lineHorizAll"></p>
     <p class="textM">Structure </p>
@@ -575,13 +574,13 @@
   <div class="blankHXL"></div>
 
   <!--photos -->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
 
     <P class="titleL">PHOTOS</P>
     <p class="lineHorizAll"></p>
     <p class="textM">Surface</p>
     <div class="blankHM"></div>
-    <img src="photo3.png" alt="DIAGRAM" >
+    <img src="photo3.png" alt="DIAGRAM">
 
 
   </div>
@@ -589,7 +588,7 @@
   <div class="blankHXL"></div>
 
   <!--photos -->
-  <div class="column marginAll">
+  <div class="column marginAll marginAll1920">
     <p class="titleL">PHOTOS</p>
     <p class="lineHorizAll"></p>
     <p class="textM"> Perspective </p>
@@ -598,11 +597,17 @@
     <img src="photo4.png" alt="DIAGRAM" class="image float">
   </div>
   <!--photos -->
+
   <div class="blankHXL"></div>
 
 
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
+  <div class="blank-lineheight-s"></div>
 
 
+
+  <div class="blankHXL"></div>
 
 </body>
 
