--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 
 
-
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vicky Wang - Product Designer</title>
+  <meta name="description" content="Vicky Wang's Portfolio Website">
 
-  <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
@@ -91,7 +91,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -148,10 +148,6 @@
   </div>
   <div class="blankHM"></div>
 
-
-  <div class="centerHorz ver1">
-    <div class=" lineVerAll "></div>
-  </div>
   <!--intro-->
 
   <!-- content-->
@@ -276,7 +272,7 @@
                 <img id="widthRC" class="widthS" src="./ar_1.svg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz widthM centerPhone">
@@ -299,7 +295,7 @@
                 <img class="widthM  shadowAll" src="./ar_2.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz centerPhone">
@@ -320,7 +316,7 @@
                 <img class="widthM " src="./ar_3.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz widthM centerPhone">
@@ -339,7 +335,7 @@
                 <img class="widthM  shadowAll" src="./ar_4.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz widthM centerPhone">
@@ -359,7 +355,7 @@
                 <img class="widthM  shadowAll" src="./ar_5.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz widthM centerPhone">
@@ -380,7 +376,7 @@
                 <img class="widthM  shadowAll" src="./ar_6.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
 
             <div class="column centerHorz widthM centerPhone">
@@ -400,7 +396,7 @@
                 <img class="widthM shadowAll" src="./ar_7.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <a href="/architecture/the_rotation_of_curves/" class="titleM">RECOVERY OF RIVER
@@ -420,7 +416,7 @@
                 <img class="widthM  shadowAll" src="./ar_8.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <a href="/architecture" class="titleM">LACMA</a>
@@ -439,7 +435,7 @@
                 <img class="widthM  shadowAll" src="./ar_9.jpg" alt="Architecture">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <a href="/architecture" class="titleM">OTHER ACADEMIC WORKS </a>
@@ -481,7 +477,7 @@
                 <img class="widthM shadowAll" src="./pg_1.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Bosque Del Apache National Wildlife Refuge</p>
@@ -498,7 +494,7 @@
                 <img class="widthM shadowAll" src="./pg_2.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Bosque Del Apache National Wildlife Refuge</p>
@@ -515,7 +511,7 @@
                 <img class="widthM shadowAll" src="./pg_3.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Bosque Del Apache National Wildlife Refuge</p>
@@ -532,7 +528,7 @@
                 <img class="widthM shadowAll" src="./pg_4.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p href="/photography" class="titleM">Sacramento National Wildlife Refuge</p>
@@ -550,7 +546,7 @@
                 <img class="widthM shadowAll" src="./pg_5.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p href="/photography" class="titleM">Sacramento National Wildlife Refuge</p>
@@ -567,7 +563,7 @@
                 <img class="widthM shadowAll" src="./pg_6.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Sacramento National Wildlife Refuge</p>
@@ -584,7 +580,7 @@
                 <img class="widthM shadowAll" src="./pg_7.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Teton National Park </p>
@@ -602,7 +598,7 @@
                 <img class="widthM shadowAll" src="./pg_8.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -619,7 +615,7 @@
                 <img class="widthM shadowAll" src="./pg_9.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -638,7 +634,7 @@
                 <img class="widthM shadowAll" src="./pg_10.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -656,7 +652,7 @@
                 <img class="widthM shadowAll" src="./pg_11.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -674,7 +670,7 @@
                 <img class="widthM shadowAll" src="./pg_12.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -692,7 +688,7 @@
                 <img class="widthM shadowAll" src="./pg_13.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -710,7 +706,7 @@
                 <img class="widthM shadowAll" src="./pg_14.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">White Sands National Monument</p>
@@ -727,7 +723,7 @@
                 <img class="widthM shadowAll" src="./pg_15.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Yellowstone National Park</p>
@@ -745,7 +741,7 @@
                 <img class="widthM shadowAll" src="./pg_16.jpg" alt="Photography">
               </a>
             </div>
-            <div class="lineVerAll">
+            <div class="blankVer">
             </div>
             <div class="column centerHorz widthM centerPhone">
               <p class="titleM">Donner Lake </p>
