--- a/photography/index.html
+++ b/photography/index.html
@@ -49,18 +49,19 @@
 
 
 
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vicky Wang - Product Designer</title>
+  <meta name="description" content="Vicky Wang's Portfolio Website">
 
-  <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-I enjoy design and code who loves solving challenging problems. 
-Interested in what you see? Shoot me an email :) " />
+    I enjoy design and code who loves solving challenging problems. 
+    Interested in what you see? Shoot me an email :) " />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
@@ -90,7 +91,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
