--- a/project/index.html
+++ b/project/index.html
@@ -52,18 +52,19 @@
 
 
 
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vicky Wang - Product Designer</title>
+  <meta name="description" content="Vicky Wang's Portfolio Website">
 
-  <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) " />
+    I enjoy design and code who loves solving challenging problems. 
+    Interested in what you see? Shoot me an email :) " />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
@@ -94,7 +95,7 @@
   <!--progress bar-->
   <div class="main-tool-bar">
     <div class="head-left">
-      <a href="http://vickywang.design/" class="pointer">VW
+      <a href="http://vickywang.me/" class="pointer">VW
       </a>
     </div>
     <div class="head-right ">
@@ -121,6 +122,7 @@
   <!--intro-->
 
   <div class="blankHL"></div>
+  <div class="blankPhoneS"></div>
   <div class="landingIntro">
     <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
